--- a/public/app-assets/css/main.css
+++ b/public/app-assets/css/main.css
@@ -11,6 +11,7 @@
 html, body{
     height: 100%;
     margin: 0;
+    font-family: Roboto !important;
 }
 
 
@@ -260,7 +261,7 @@ div.hero-text{
     background-color: rgba(225, 255, 255, 0.4) !important;
 }
 .admin-login{
-    background-color: rgba(0, 73, 73, 0.4) !important;
+    background-color: rgba(255, 255, 255, 0.4) !important;
 }
 .student-login{
     background-color: rgba(255, 255, 255, 0.4) !important;
