--- a/public/app-assets/css/styles.css
+++ b/public/app-assets/css/styles.css
@@ -10,6 +10,13 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+
+ html, body{
+  /* height: 100%;
+  margin: 0; */
+  font-family: Roboto !important;
+}
+
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
