--- a/public/app-assets/css/main.css
+++ b/public/app-assets/css/main.css
@@ -549,6 +549,15 @@ p.forget-password-text a {
     margin-left: 350px;
 }
 
+.generate-receipt{
+    height: 100%;
+    width: 28%;
+    overflow-y: scroll;
+    overflow-x: scroll;
+    position: fixed;
+    margin-left: -20px;
+}
+
 .student-list-div-3{
     /* margin-left: -30px; */
     height: 100%;
