--- a/public/app-assets/css/main.css
+++ b/public/app-assets/css/main.css
@@ -23,6 +23,36 @@ html, body{
 
 /* front page */
 
+div#gallery{
+    background-color: #fff;
+    margin-top: 10px;
+    padding: 30px;
+}
+
+div.gallery {
+    /* margin: 2px; */
+    padding: 10px;
+    /* border: 1px solid #ccc; */
+    /* float: left; */
+    /* width: 180px; */
+  }
+  
+  div.gallery img:hover {
+    /* border: 1px solid #777; */
+    opacity: .5;
+  }
+  
+  div.gallery img {
+    width: 100%;
+    border: 2px solid #145251;
+    height: 200px;
+  }
+  
+  div.desc {
+    padding: 15px;
+    text-align: center;
+  }
+
 .header-ims{
     height: 80px;
     /* position: fixed; */
@@ -214,7 +244,7 @@ div.hero-text{
 }
 .online-reg-form{
     height: auto;
-    margin-top: 100px !important;
+    margin-top: -150px !important;
     border-radius: 5px;
     background-color: #fff;
     /* background-color: #fff; */
