--- a/public/app-assets/css/main.css
+++ b/public/app-assets/css/main.css
@@ -551,6 +551,13 @@ p.forget-password-text a {
     box-shadow: 0 4px 8px 0 rgba(255, 191, 94, 0.2), 0 6px 20px 0 rgba(255, 161, 73, 0.19);
     cursor: pointer;
 }
+.student-list{
+    height: 100%;
+    /* width: 100%; */
+    overflow: scroll;
+    overflow-x: scroll;
+    /* position: fixed; */
+}
 .student-list-div{
     margin-left: -30px;
     height: 100%;
