--- a/public/app-assets/css/main.css
+++ b/public/app-assets/css/main.css
@@ -3,6 +3,10 @@ html, body{
     margin: 0;
     font-family: Roboto, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
 }
+.carousel-item img{
+    width: 100%;
+    height: 600px;
+}
 form label {
     color: #d9ba79 !important;
 }
@@ -171,6 +175,9 @@ div.hero-text{
 
 .text-ims-default{
     color: #145251 !important;
+}
+.ims-bg-gradient{
+    background: linear-gradient(to bottom, rgba(0, 73, 73, 0.6) 0%, rgba(0, 73, 73, 0.6) 100%)
 }
 .text-ims-orange{
     color: #d9ba79 !important;
